k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    app: backend  # Debe coincidir con el label de tu deployment
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
